tests/data/placebo/test_asg_invalid_third_ami/ec2.DescribeSecurityGroups_1.json
{
  "status_code": 200,
  "data": {
    "SecurityGroups": [
      {
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "PrefixListIds": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "Description": "Created from the RDS Management Console",
        "IpPermissions": [
          {
            "PrefixListIds": [],
            "FromPort": 3306,
            "IpRanges": [
              {
                "CidrIp": "204.63.44.142/32"
              }
            ],
            "ToPort": 3306,
            "IpProtocol": "tcp",
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "GroupName": "rds-launch-wizard",
        "VpcId": "vpc-d2d616b5",
        "OwnerId": "644160558196",
        "GroupId": "sg-29ee3e5a"
      },
      {
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "PrefixListIds": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "Description": "launch-wizard-2 created 2017-10-26T15:16:21.145-04:00",
        "IpPermissions": [
          {
            "PrefixListIds": [],
            "FromPort": 22,
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "ToPort": 22,
            "IpProtocol": "tcp",
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "GroupName": "launch-wizard-2",
        "VpcId": "vpc-d2d616b5",
        "OwnerId": "644160558196",
        "GroupId": "sg-30f4b842"
      },
      {
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "PrefixListIds": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "Description": "launch-wizard-1 created 2017-09-14T22:02:43.877-04:00",
        "IpPermissions": [
          {
            "PrefixListIds": [],
            "FromPort": 22,
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "ToPort": 22,
            "IpProtocol": "tcp",
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "GroupName": "launch-wizard-1",
        "VpcId": "vpc-d2d616b5",
        "OwnerId": "644160558196",
        "GroupId": "sg-3839ec4b"
      },
      {
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "PrefixListIds": [],
            "IpRanges": [
              {
                "CidrIp": "10.0.0.0/10"
              }
            ],
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "Description": "Created from the RDS Management Console",
        "IpPermissions": [
          {
            "PrefixListIds": [],
            "FromPort": 5432,
            "IpRanges": [
              {
                "CidrIp": "209.43.102.90/32"
              }
            ],
            "ToPort": 5432,
            "IpProtocol": "tcp",
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "GroupName": "rds-launch-wizard-7",
        "VpcId": "vpc-d2d616b5",
        "OwnerId": "644160558196",
        "GroupId": "sg-3e9ef441"
      },
      {
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "PrefixListIds": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "Description": "default VPC security group",
        "IpPermissions": [
          {
            "IpProtocol": "-1",
            "PrefixListIds": [],
            "IpRanges": [],
            "UserIdGroupPairs": [
              {
                "UserId": "644160558196",
                "GroupId": "sg-4b9ada34"
              }
            ],
            "Ipv6Ranges": []
          }
        ],
        "GroupName": "default",
        "VpcId": "vpc-f1516b97",
        "OwnerId": "644160558196",
        "GroupId": "sg-4b9ada34"
      },
      {
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "PrefixListIds": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "Description": "default VPC security group",
        "Tags": [
          {
            "Value": "",
            "Key": "Name"
          },
          {
            "Value": "c7n-test-val",
            "Key": "c7n-test-tag"
          }
        ],
        "IpPermissions": [
          {
            "IpProtocol": "-1",
            "PrefixListIds": [],
            "IpRanges": [
              {
                "CidrIp": "108.56.181.242/32"
              }
            ],
            "UserIdGroupPairs": [
              {
                "UserId": "644160558196",
                "GroupId": "sg-6c7fa917"
              }
            ],
            "Ipv6Ranges": []
          }
        ],
        "GroupName": "default",
        "VpcId": "vpc-d2d616b5",
        "OwnerId": "644160558196",
        "GroupId": "sg-6c7fa917"
      },
      {
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "PrefixListIds": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "Description": "Created from the RDS Management Console",
        "IpPermissions": [
          {
            "PrefixListIds": [],
            "FromPort": 5432,
            "IpRanges": [
              {
                "CidrIp": "108.45.72.12/32"
              }
            ],
            "ToPort": 5432,
            "IpProtocol": "tcp",
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "GroupName": "rds-launch-wizard-1",
        "VpcId": "vpc-d2d616b5",
        "OwnerId": "644160558196",
        "GroupId": "sg-837620f1"
      },
      {
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "PrefixListIds": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "Description": "Created from the RDS Management Console",
        "IpPermissions": [
          {
            "PrefixListIds": [],
            "FromPort": 5432,
            "IpRanges": [
              {
                "CidrIp": "209.43.102.90/32"
              }
            ],
            "ToPort": 5432,
            "IpProtocol": "tcp",
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "GroupName": "rds-launch-wizard-6",
        "VpcId": "vpc-d2d616b5",
        "OwnerId": "644160558196",
        "GroupId": "sg-8c84eef3"
      },
      {
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "PrefixListIds": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "Description": "internal",
        "Tags": [
          {
            "Value": "internal",
            "Key": "Name"
          }
        ],
        "IpPermissions": [
          {
            "PrefixListIds": [],
            "FromPort": 0,
            "IpRanges": [],
            "ToPort": 65535,
            "IpProtocol": "tcp",
            "UserIdGroupPairs": [
              {
                "UserId": "644160558196",
                "GroupId": "sg-9a5386e9"
              }
            ],
            "Ipv6Ranges": []
          }
        ],
        "GroupName": "internal",
        "VpcId": "vpc-d2d616b5",
        "OwnerId": "644160558196",
        "GroupId": "sg-9a5386e9"
      },
      {
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "PrefixListIds": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "Description": "AutoScaling-Security-Group-1 (2017-10-31 03:43:54.856-04:00)",
        "IpPermissions": [
          {
            "PrefixListIds": [],
            "FromPort": 22,
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "ToPort": 22,
            "IpProtocol": "tcp",
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "GroupName": "AutoScaling-Security-Group-1",
        "VpcId": "vpc-d2d616b5",
        "OwnerId": "644160558196",
        "GroupId": "sg-c63712b4"
      }
    ],
    "ResponseMetadata": {}
  }
}
